Issue#3 Add quartz jobs